fix navbar on mobile viewports

--- a/public/css/park.me.css
+++ b/public/css/park.me.css
@@ -2,11 +2,6 @@ body
 {	
     padding-top: 70px;
 }
-@media (max-width: 768px) {
-    body {
-        padding-top: 210px;
-    }
-}
 
 #splash
 {
